--- a/paper.tex
+++ b/paper.tex
@@ -25,84 +25,124 @@ silicon substrate and fabrication process. A physically unclonable function
 (or PUF) uses this uniqueness to provide a cryptographic key that 
 cannot be forged. PUFs have wide application, especially for device
 authentication, anti-counterfeiting, and tamper resistance.
-Unlike contemporary techniques of storing keys in memory,
-PUFs utilize a series of challenges and responses. Each response is a 
-function of the challenge and device characteristics. 
 
 Several PUFs have been constructed over the years. Most of them
 from electronic components such as the SRAM, ring oscillators, flip flops,
 FPGA units etc. A few non-electronic PUFs such as optical, acoustic,
 and magnetic PUFs have also been proposed. The important requirements
-for a PUF is that they should be compact, unforgeable, unpredictable, irreversible, 
-reliable, and easy to evaluate. These requirements are easier said than done.
-Many of the requirements are contrasting, while many are drastically affected
-by noise and other environmental factors such as the ambient temperature.
-Thus the search for the search for the perfect PUF is an open problem
-and active area of research.
+for a PUF is that they should be compact, unforgeable, unpredictable, 
+irreversible, reliable, and easy to evaluate. These requirements are 
+easier said than met. Many of the requirements are contrasting, while 
+many are drastically affected by noise and other environmental factors 
+such as the ambient temperature. Thus the search for the search for 
+the perfect PUF is an open problem and active area of research.
+
+We propose to construct PUFs using mixed-signal components such as {\em analog to
+digital converters} (ADCs) and {\em digital to analog converters} (DACs).
+As their names suggest, ADCs convert analog voltage signals 
+to equivalent digital data, while DACs convert digital data into the corresponding
+analog voltage. These devices are omnipresent in embedded 
+systems such as mobile phones, wireless sensor nodes, smart tablets, etc.
+and are often integrated into micro-controllers~\cite{xxx}. 
+In mobile phones for instance, DACs are used to sample audio signals and convert
+them into the digital domain, while ADCs to drive the phone's speaker. 
+
+Both ADCs and DACs have analog as well as digital parts. This is
+appealing for constructing PUFs due to the following reasons.
+\begin{itemize}
+\item As ADCs and DACs have digital parts that are interfaced with the
+processor, the resulting PUFs built from them are intrensic and  
+directly accessible by applications running in the system. No external 
+measuring equipment is required.
+
+\item By virtue of having analog components in mixed-signal devices, 
+micro and nano scale variations are likely to be observed in two dimensions : 
+device delays and voltage levels. Compare this with the contemporary intrensic
+PUFs, where the variations are only in one dimension; either in the delays or
+the voltage level. For instance, in delay based PUFs like the arbiter and the 
+ring oscillator PUF, inherient differences
+only in delays are captured. On the other hand in memory based PUFs, memories 
+cells settling to either 0 or 1 is captured. In comparison, there are multiple 
+values an analog voltage can take.
+
+\item MS-PUFs do not require any dedicated circuits on chip. It reuses ADCs and
+DACs that are present in the microprocessor. Thus MS-PUFs do not have any overheads.
+\end{itemize}
+
+\begin{figure}[!b]
+\centering
+\caption{Mixed-Signal PUF in a Micro-controller with built-in ADC and DAC. }
+\includegraphics[width=6cm]{figs/mspuf}
+\end{figure}
 
 
-These requirements should be met 
-irrespective of the noise and other environmental factors. 
+The scheme for the MS-PUF is shown in Figure~\ref{fig:mspuf}. An output of a DAC channel
+is connected to the input of the ADC. A {\em challenge} in the form of a
+digital time-series pattern is transferred to the DAC from the processor. This signal is
+converted to analog at the DAC's output. The ADC quantifies and reconverts the signal 
+into a time-series digital pattern. This ADC output is the {\em response} to the challenge.
+Since the ADC and DAC are accessible from the processor, a software program can create 
+create a challenge and read the corresponding response. 
+The response is affected by many factors including the quantification and environmental
+noise, and inherient variations due to the fabrication variations of the ADC and the 
+DAC. The latter aspect is the focus for constructing the PUF.
 
 
 
 
-In this demonstrate, we hope to build a PUF based on analog to digital
-converters (ADCs). These devices are widely used in wireless sensor nodes
-and also integrated into many low cost micro-controllers.
-Compared to other electronic PUFs, ADC PUFs may not require any 
-special hardware such as oscillators, arbiters, etc. They would thus
-be compact. The plan is to feed analog waveforms to the ADC (challenges) 
-under varying conditions and collect the converted digital outputs 
-(responses). The responses would then be analyzed for PUF properties 
-such as reproducibility, uniqueness, unclonability, unpredictability, 
-one-wayness, etc.
+The paper \ldots
 
+
+The structre of the paper is as follows....
 
 %\bibliographystyle{abbrv}
 %\bibliography{screfs}
 
 \section{Background}
-A 
-
-can be thought as an electronic fingerprint for devices where identification of fingerprints is easy but cloning is very
-difficult. 
-
-PUF relies on the fact that given the exact details of the manufacturing process, two devices tend to exhibit
-different behaviour because of the difference in their physical microstructure. The difference in behaviour should
-be difficult to predict but easy to reproduce. PUF uses concept of challenge and response where challenge is the
-input applied to the device and response is the value obtained from the device after some post-processing. We
-define the challenge response mapping( f ) as follows
-f : C → R | f (c) = r c ∈ C and r ∈ R
-(1)
-where C denotes the domain of challenges and R denotes the range of responses.
-The ideal properties for the challenge response function are
-1) Evaluatable: The response r ∈ R for a challenge should be easily computed from f and a given challenge
-c ∈ C .
-2) Unique: the challenge response function( f ) should be unique for each device which will help in identifying
-the device.
-3) Reproducible: f should be easily reproducible allowing a small degree of error.
-4) Unclonable: Given a f it should be virtually impossible to create a cloned function g = f where f (c) ≈ g(c) .3
-5) Unpredictable: Given a set of challenge, response pairs P = {(c i , ri)|r i = f (c i )} it should be difficult to
-predict response r j for a known challenge c j where r j = f (c j ) and c j ∈
-/ P
-6) One way: f should be an one way function such that given a response r and f it should be difficult to find
-a challenge c such that r = f (c) .
+\subsection{Physically Unclonable Functions}
+A PUF relies on the fact that two similar devices tend to exhibit
+different behaviour because of differences in their physical microstructure
+and process variations during manufacture. A PUF extracts these differences by a 
+series of challenges and responses. Each response is a 
+function of the challenge and the device characteristics. Thus each device will
+have a different response for the same challenge. A collection of challenge-response pairs
+are used for several cryptographic applications such as device fingerprinting, 
+authentication, anti-cloning, and generation of cryptographic keys.
 
 
-\section{Related Works}
-In the last decade various types of PUFs have been proposed. These include non-electronic PUFs like Optical PUFs, Acoustic PUFs, Magnetic PUFs and electronic PUFs. The electronic PUFs can be further subdivided into analog electronic PUFs and digital intrinsic PUFs. The various types of PUFs are discussed in more detail in this section.
-\subsection{Non-electronic PUFs}
-In non-electronic PUFs, randomness arise due to non electronic components. In the case of \textit{Optical PUFs}, the main component is an optical token which is doped with refractive glass spheres in a random fashion. When the token is radiated with a laser, a speckle pattern is formed. The responses are  unique because  of the microscopic differences between any two tokens. For \textit{Acoustic PUFs}, the main component is an acosutic delay line where an electrical signal is converted to mechanical vibration which is again converted to electrical signal using transducers. The mechanical vibration causes a sound wave and scatters yielding unique reflections. The disadvantage of the above PUFs is that expensive hardware and accurate positioning is required for their construction.
-\subsection{Analog electronic PUFs}
-In the above classification of PUFs, electronic quantities like capacitance or resistance is measured. An example of such a PUF is \textit{Coating PUF} where randomness of capacitance of a protective coating of comb shaped metal wires on top of an IC is considered. This randomness is induced by a dielectric coating between the metal wires. The advantage of above PUFs is their low cost of construction and the protective coating can be used to detect tampering. However these coating PUFs are not preferred because of the limited challenge response pairs.
+The PUF's challenge and response can be represented by a function $f$ 
+mapping the domain of challenges ($\mathcal C$) to a range of responses ($\mathcal R$).
+\begin{equation*}
+f : \mathcal C \rightarrow \mathcal R \,\,\,
+  | \,\,\, f(c) = r, \text{ where } c \in \mathcal C \text{ and } r \in \mathcal R
+\end{equation*}
 
-\subsection{Digital Intrinsic PUFs}
-The PUFs seen so far are non intrinsic PUFs where randomness is explicitly introduced like an optical token in case of Optical PUFs. In intrinsic PUFs, the challenge response collection mechanism is embedded in the device. The intrinsic PUFs can be further subdivided into delay-based PUFs or memory-based PUFs. In delay-based PUFs, randomness in delays of wires and gates are exploited. Commonly used delay-based PUFs are  arbiter PUFs and ring oscillator PUFs. In memory-based PUFs, randomness in settling of values in memory cells is exploited. These include SRAM PUFs, Butterfly PUFs and Flip-flop PUFs.
+The function $f$ should be one-way, easy to evaluate and reproduce, yet unpredictable
+and unclonable. 
 
-%Disadvantage of intrinsic puf and why our model is better.
-\section{ADC and DAC}
-A Digital to Analog Converter(DAC) as the name suggests converts digital data to an analog quantity like voltage. A n-bit DAC can be constructed easily using a R-2R ladder which consists of n R-2R networks. Each network is fed with a reference voltage(say $V_{ref}$) for a set bit or zero voltage for a 0 bit. A R-2R network in the ladder causes the voltage to be split accordingly to its bit position. For a n-bit DAC, output voltage varies from 0 to $(1-\frac{1}{2^{n}})*V_{ref}$ in steps of $\frac{1}{2^{n}}*V_{ref}$. A R-2R DAC suffers from thermal noise which increases with resistance and temperature. The PUF output variation can occur because of microscopic variations in the resistors and switches used.
+\subsection{Mixed Signal Circuits}
+Mixed signal circuits interface the analog and digital domains in a chip. 
+They are typically used to digitalize real world signals from sensors, which
+then can be processed. Mixed signal circuits are also used to control hardware
+devices. For instance, in a mobile phone, audio signals captured from 
+a microphone are digitalized by means of an {\em analog to digital converter
+(ADC)}, before being processed by the mobile software. Received audio data is
+converted to analog by a {\em digital to analog converter (DAC)} and actuate the
+speakers of the mobile phone. This section provides the necessary background
+for ADCs and DACs.
+
+An $n$-bit DAC converts and $n$-bit digital value to a corresponding analog
+voltage. A typical DAC uses an R-2R ladder as shown in Figure~\ref{fig:r2r}.
+Each stage comprises of a pair of resistors (R and 2R) and a switch $s_i$ 
+($0 \le i \le n$). The switch $s_i$ is closed only if the $i$-th bit of the
+digital data is one. 
+
+
+The current through amplifer is the weighted sum of
+all 
+
+
+can be constructed easily using a R-2R ladder which consists of n R-2R networks. Each network is fed with a reference voltage(say $V_{ref}$) for a set bit or zero voltage for a 0 bit. A R-2R network in the ladder causes the voltage to be split accordingly to its bit position. For a n-bit DAC, output voltage varies from 0 to $(1-\frac{1}{2^{n}})*V_{ref}$ in steps of $\frac{1}{2^{n}}*V_{ref}$. A R-2R DAC suffers from thermal noise which increases with resistance and temperature. The PUF output variation can occur because of microscopic variations in the resistors and switches used.
 \begin{figure}[H]
 \includegraphics[scale=0.8]{SA-ADC.png}
 \centering
@@ -115,10 +155,9 @@ An Analog to Digital Converter (ADC) on the other hand converts an analog quanti
 \item \textit{Sigma-Delta ADC:} A sigma-delta ADC consists of modulator and a digital filter. An analog signal is fed to the modulator whose output is fed to the digital filter to obtain the digital output. A sigma-delta DAC achieves high levels of accuracy without using expensive components. However the conversion time is slow compared to other types of ADC's.
 \item \textit{Successive-Approximation ADC:} A successive-approximation ADC uses binary search to compare the input signal with varying voltage levels to obtain its equivalent digital output. In SA-ADC, a successive approximation register(SAR) containing a digital value is fed to an internal DAC and its output is compared to the input voltage. A sample and hold(SAH) circuit is used to supply constant input voltage to the comparator. A SA-ADC provides medium levels of accuracy and conversion time. The PUF output variation can occur because of microscopic variations in electrical components used in SAH circuit and internal DAC.
 %It suffers from thermal noise for capacitors($kT/C$) which increases with temperature and is inversely proportional to the capacitance. However with higher capacitance, power consumption increases and accuracy decreases and usually a trade off is required.
-
 \end{itemize}
 
-\section{Mixed Circuit based PUF}
+\section{Mixed Circuit PUFs}
 In any electronic device, we encounter conversions from analog form to digital form and vice versa. Consider
 two people speaking through a mobile phone. Sound is converted to an analog signal by the microphone, which is
 then converted to digital form by an analog to digital converter(ADC) for transmission. In the other end, the digital
@@ -129,6 +168,47 @@ the idea of using ADC and DAC components for PUFs. The ADC and DAC modules can b
 
 A set of hexadecimal values is passed to the DAC which converts it to its corresponding analog values which is again fed to ADC which converts back to digital value. So our challenge is an array of digital values which is fed to the DAC and response is calculated from the digital values output by the ADC of the device.The microscopic variations present in the ADC and DAC components gives rise to an unique response for each device for the same set of challenges. This mixed circuit based PUF is cost effective and very efficient as it does not require expensive hardware like arbiters and oscillators for digital electronic PUFs and can be easily reproducible unlike non electronic PUFs. Moreover, ADC and DAC components are ubiquitous in modern digital devices and can be modified easily with little effort and integrated effortlessly into the current crop of devices.
 
+
+
 \section{Evaluation}
+
+
+
+
+\section{Related Works}
+In the last decade various types of PUFs have been proposed. The PUFs are categorized into either
+electronic PUFs or non-electronic PUFs. Electronic PUFs are further classified into analog-electronic
+PUFs and digital-intrinsic PUFs. The various types of PUFs are discussed in this section.
+
+\subsection{Non-electronic PUFs}
+As the name suggests, non-electronic PUFs use randomness arising due to non electronic components in the system
+such as from optical, acoustic, and magnetic media. In the case of \textit{Optical PUFs} for instance, the main 
+component is an optical token which is doped with refractive glass spheres in a random fashion. When the token is 
+radiated with a laser, a speckle pattern is formed. The patterns are  unique because  of the microscopic differences 
+between the tokens. In \textit{Acoustic PUFs}, mechanical vibrations is the main source of
+randomness. The vibrations causes a sound wave, which scatters yielding unique reflections. 
+Non-electronic PUFs do not have wide usability due to expensive hardware and accurate positioning 
+required for their construction.
+
+\subsection{Analog electronic PUFs}
+In these PUFs, partial randomness introduced due to electronic quantities like capacitance or 
+resistance is measured. 
+For example, in a \textit{power distribution PUF}, voltage drops based on resistance variations
+in the power grid of a chip is measured. The voltage drops are partial random owing to the
+variations in manufacturing. In a \textit{V\_T PUFs}, differences due to manufacturing variations
+on the threshold voltage of transistors is exploited. In both these PUFs external measuring instruments
+are required, making them expensive.
+
+
+\subsection{Digital Intrinsic PUFs}
+The PUFs discussed so far are non-intrinsic, where randomness is explicitly introduced into the
+system. In intrinsic PUFs, the challenge response 
+collection mechanism is embedded in the device. There are two types of intrinsic PUFs :
+delay-based and memory-based. In delay-based PUFs, random delays in propagating a current signal
+through wires is exploited. Commonly used delay-based PUFs are arbiter PUFs and ring oscillator 
+PUFs. In memory-based PUFs, randomness in settling of values in memory cells is exploited. 
+These include SRAM PUFs, Butterfly PUFs and Flip-flop PUFs.
+
+
 
 \section{Conclusion}
