changes in MS-PUF section

--- a/cca.tex
+++ b/cca.tex
@@ -1,9 +1,7 @@
 \documentclass{llncs}
 \usepackage{color}
 \usepackage[final]{graphicx}
-%\usepackage[ruled]{algorithm2e}
-\usepackage{algorithmic}
-\usepackage{algorithm}
+\usepackage[ruled]{algorithm2e}
 %\usepackage{amsthm}
 %\usepackage{epsfig}
 \usepackage{amssymb}
