--- a/paper.tex
+++ b/paper.tex
@@ -148,7 +148,7 @@ Thus, the analog voltage at the amplifier's input
 is proportional to the digital data.
 
 \begin{figure}
-\includegraphics[width=6cm]{SA-ADC.png}
+\includegraphics[width=9cm]{R-2R-DAC.png}
 \centering
 \caption{Block diagram of a 4-bit R-2R DAC\label{fig:r2r}}
 \end{figure}
