Updated caption of R2R dac figure

--- a/paper.tex
+++ b/paper.tex
@@ -150,7 +150,7 @@ is proportional to the digital data.
 \begin{figure}
 \includegraphics[width=9cm]{R-2R-DAC.png}
 \centering
-\caption{Block diagram of a 4-bit R-2R DAC\label{fig:r2r}}
+\caption{Block diagram of an n-bit R-2R DAC\label{fig:r2r}}
 \end{figure}
 
 {\flushleft \em Analog to Digital Converters.}
