--- a/paper.tex
+++ b/paper.tex
@@ -43,9 +43,9 @@ As their names suggest, ADCs convert analog voltage signals
 to equivalent digital data, while DACs convert digital data into the corresponding
 analog voltage. These devices are omnipresent in embedded 
 systems such as mobile phones, wireless sensor nodes, smart tablets, etc.
-and are often integrated into micro-controllers~\cite{xxx}. 
-In mobile phones for instance, DACs are used to sample audio signals and convert
-them into the digital domain, while ADCs to drive the phone's speaker. 
+and are often integrated into micro-controllers~\cite{xxx}. Several 
+micro-controller vendors have multiple DACs and ADCs built into a
+single device.
 
 Both ADCs and DACs have analog as well as digital parts. This is
 appealing for constructing PUFs due to the following reasons.
@@ -71,24 +71,28 @@ DACs that are present in the microprocessor. Thus MS-PUFs do not have any overhe
 
 \begin{figure}[!b]
 \centering
-\caption{Mixed-Signal PUF in a Micro-controller with built-in ADC and DAC. }
+\caption{Mixed-Signal PUF in a Micro-controller with built-in ADC and DAC.\label{fig:mspuf} }
 \includegraphics[width=6cm]{figs/mspuf}
 \end{figure}
 
 
-The scheme for the MS-PUF is shown in Figure~\ref{fig:mspuf}. An output of a DAC channel
-is connected to the input of the ADC. A {\em challenge} in the form of a
-digital time-series pattern is transferred to the DAC from the processor. This signal is
-converted to analog at the DAC's output. The ADC quantifies and reconverts the signal 
-into a time-series digital pattern. This ADC output is the {\em response} to the challenge.
-Since the ADC and DAC are accessible from the processor, a software program can create 
-create a challenge and read the corresponding response. 
-The response is affected by many factors including the quantification and environmental
-noise, and inherient variations due to the fabrication variations of the ADC and the 
-DAC. The latter aspect is the focus for constructing the PUF.
+The scheme for the MS-PUF is shown in Figure~\ref{fig:mspuf}. Outputs of DACs in the device
+are fedback to the inputs of ADCs to form feedback channels. 
+The DAC in each channel would receive digital data from the processor and convert it
+to an equivalent analog value. The ADC at the other end of the channel would reconvert
+the analog value to a corresponding digital data. The reconverted digital data would 
+be affected by several factors including quantification and environmental noise,
+and inherient variations due to the fabirication of the ADCs and DACs. The latter
+aspect is useful for constructing PUFs.
 
 
-
+The PUF {\em challenge} is a 
+digital time-series pattern and a random sequence of feedback channel identifiers. 
+The time-series pattern is transferred to the first channel in the sequence and the 
+and the result read from the corresponding ADC. This result is a time-series 
+digital pattern and is sent to the next channel in the sequence. This `looping' of the
+pattern continues for every channel in the sequence. The result after the final loop
+is taken as the PUFs {\em response}. 
 
 The paper \ldots
 
@@ -180,45 +184,68 @@ in electrical components used in SAH circuit and internal DAC.
 \section{Mixed Signal PUFs}
 This section describes how the MS-PUFs are built.
 
-{\flushleft \em Construction of the MS-PUF. }
-The MS-PUF is created by connecting an output of a DAC to an
-input channel of an ADC. This creates a loop between the processor
-core, the DAC, and the ADC as shown in Figure~\ref{fig:ms-puf}.
-The sofware running on the processor core 
-generates a challenge in the form of a time-series pattern
-comprising of $n$-bit digital values, which are transferred one at a time
-to the DAC. Each digital value is converted to an analog voltage (or
-current) and reconverted to a representative $m$-bit digital value by the ADC.
-The software program reads the
-ADC output and forms the response to the challenge using a function $g$.
-Algorithm~\ref{algo:puf_sw} has the details.
+{\flushleft \em Constructing the MS-PUF. }
+The MS-PUF is created by connecting outputs of DAC to an
+input channel of an ADC. This creates loops between the processors
+cores, DACs, and ADCs as shown in Figure~\ref{fig:ms-puf}.
+If there are $n$ DACs and $m$ ADCs in the device
+(and $n \le m$), then $n$ such loops are made resulting in $n$ feedback channels.
+The PUFs challenge is a time-series pattern comprising of
+$\alpha$-bit digital values and a sequence of random channel identifiers.
+The response is a time-series pattern comprising of $\beta$-bit digital 
+values obtained from the ADC. The values for $\alpha$ and $\beta$ are
+respectively dependent on the DAC and ADC resolutions. Typically, $\alpha = \beta$
+for a device and have values 8, 12, 16, or 24.
+
+Algorithm~\ref{algo:puf_sw} depicts the MS-PUF. 
+The sofware running in the processor core 
+selects the first channel from the sequence ($\mathbf L$) and 
+transfers the time-series digital pattern to the corresponding
+DAC one value at a time ({\em line~5}). Each digital value is converted to an analog voltage (or
+current) and reconverted to a representative digital value by the ADC.
+The software program reads these values from the ADC to form a new digital time-series 
+pattern ({\em line~7}). This pattern forms the input to the next channel in the sequence. The process
+is repeated for the entire sequence. A function $g$ processes the initial pattern ($\mathbf C$) and 
+the final pattern formed (corresponding to $\mathbf L_{len(L)}$) to form the PUFs response.
 
 \begin{algorithm}[!ht] \label{algo:puf_sw}
 \begin{scriptsize}
-	\caption{\emph{Software Program for the MS-PUF}}
+	\caption{\emph{MS-PUF : Obtaining the Response to a Challenge}}
 	\DontPrintSemicolon
-	\KwIn{$\mathbf C$ : an array representing the challenge}
+ 	\LinesNumbered
+	\KwIn{$(\mathbf C,\mathbf L)$ : (an array representing digital time-series pattern, 
+                                         a random sequence of channel identifiers)}
 	\KwOut{$\mathbf R$ : an array representing the response}
 	\Begin{
-		\For{$i \in \{1, 2, \cdots len(\mathbf C)\}$}{
-			Output\_to\_DAC($\mathbf C_i$); \\
-			/* Wait for ADC to finish conversion */ \;
-			$r$ = Input\_from\_ADC(); \;	
-			$\mathbf R_i = g(C_i, r)$ \;
+		$\mathbf T \leftarrow \mathbf C$ \;
+		\For{$i \in \{1, 2, \cdots, len(\mathbf L)\}$}{
+			\For{$j \in \{1, 2, \cdots, len(\mathbf T)\}$}{
+				Output\_to\_DAC($\mathbf T_j$, $\mathbf L_i$); \\
+				/* Wait for ADC to finish conversion */ \;
+				$r$ = Input\_from\_ADC($\mathbf L_i$); \;	
+				$\mathbf T_j \leftarrow r$ \;
+			}
 		}
+		$\mathbf R \leftarrow g(\mathbf C, \mathbf T)$ \;
 		\Return ${\mathbf R}$
 	}
 \end{scriptsize}
 \end{algorithm}
 
-In every iteration in Algorithm~\ref{algo:puf_sw}, $r$, the $m$-bit reply from 
-the ADC is the result of the $n$-bit DAC input $\mathbf C_i$
-undergoing a conversion to analog followed by a reconversion to digital.
-Typically $m$ and $n$ are $8$, $12$, $16$, or $24$ bits. 
-Due to reasons such as quatification and ambient noise, the reply
-$r$ would be different from $\mathbf C_i$. Further, due to nano-scale
-variations between devices, $r$ would vary from one device
-to another.  There are several potential reasons for variations 
+In every iteration of Algorithm~\ref{algo:puf_sw}, $r$, the $\beta$-bit 
+reply from the ADC is the result of $\alpha$-bit DAC input $\mathbf T_j$ 
+undergoing a conversion to analog followed by a reconversion to digital. 
+Due to reasons such as quatification and ambient noise, the result ($r$)
+would be different from $\mathbf T_j$ even if $\alpha = \beta$. 
+
+Due to nano-scale variations, devices would inject certain randomness into
+$r$ that would depend on the channel used and would vary from one device to another. 
+
+
+
+
+ 
+There are several potential reasons for variations 
 between devices.
 A DAC output for instance, is influenced by several nano-scale features such 
 as voltage references, resistor tolerances, 
@@ -230,19 +257,6 @@ other components in the ADC such as sample and hold circuits and
 comparators could lead to differences in the reply.
 
 
-
-
-
-
-
-
- could cause two DACs to have different responses
-
-
- such as the tolerance 
-
-
-Nano scale variations in DACs and ADCs.
 
 
 
