Minor changes in Sec 3

--- a/paper.tex
+++ b/paper.tex
@@ -184,7 +184,7 @@ in electrical components used in SAH circuit and internal DAC.
 \section{Mixed Signal PUFs}
 This section describes how the MS-PUFs are built.
 
-{\flushleft \em Constructing the MS-PUF. }
+\subsection{Constructing the MS-PUF}
 The MS-PUF is created by connecting outputs of DACs to 
 input channels of an ADC. This creates loops between the processors
 core, DACs, and ADCs as shown in Figure~\ref{fig:ms_puf}.
@@ -233,6 +233,7 @@ the final pattern formed (corresponding to $\mathbf L_{len(L)}$) to form the PUF
 \end{scriptsize}
 \end{algorithm}
 
+{\flushleft \em Variations in the MS-PUF Response.}
 In every iteration of Algorithm~\ref{algo:puf_sw}, $r$, the $m$-bit 
 reply from the ADC is the result of the $n$-bit DAC input $\mathbf T_j$ 
 undergoing a conversion to analog followed by a reconversion to digital. 
@@ -252,7 +253,12 @@ other components in the ADC such as sample and hold circuits and
 comparators could lead to differences in the reply.
 
 
+{\flushleft \em Preventing Modeling Attacks.}
 
+
+\subsection{A Formal Model for MS-PUFs}
+
+\subsection{xxx}
 
 
 
@@ -260,14 +266,6 @@ comparators could lead to differences in the reply.
 A R-2R DAC suffers from thermal noise which increases with resistance and temperature. The PUF output variation can occur because of microscopic variations in the resistors and switches used.
 
 
-two people speaking through a mobile phone. Sound is converted to an analog signal by the microphone, which is
-then converted to digital form by an analog to digital converter(ADC) for transmission. In the other end, the digital
-data is converted to analog by a digital to analog converter(DAC) and the speaker converts to audible sound. In this
-digitalizing world, ADC and DAC modules are omnipresent in all devices. The main reason behind this is that all the input from
-the external world is analog in nature and the device process everything digitally. This factor plays a key role in
-the idea of using ADC and DAC components for PUFs. The ADC and DAC modules can be embedded inside the chip or outside the chip.
-
-A set of hexadecimal values is passed to the DAC which converts it to its corresponding analog values which is again fed to ADC which converts back to digital value. So our challenge is an array of digital values which is fed to the DAC and response is calculated from the digital values output by the ADC of the device.The microscopic variations present in the ADC and DAC components gives rise to an unique response for each device for the same set of challenges. This mixed circuit based PUF is cost effective and very efficient as it does not require expensive hardware like arbiters and oscillators for digital electronic PUFs and can be easily reproducible unlike non electronic PUFs. Moreover, ADC and DAC components are ubiquitous in modern digital devices and can be modified easily with little effort and integrated effortlessly into the current crop of devices.
 
 
 
